[package]
name = "worms-armageddon-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.*"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
]
