[package]
name = "worms-armageddon-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "wkVersionCheck"
crate-type = ["cdylib"]

[build]
target = ["x86_64-pc-windows-gnu"]

[dependencies.windows]
version = "0.*"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
]
